--- a/app/views/drivers.html
+++ b/app/views/drivers.html
@@ -4,7 +4,7 @@
   <tr><th colspan="4">Drivers Championship Standings</th></tr>
   </thead>
   <tbody>
-  <tr ng-repeat="driver in driversList | filter: searchFilter">
+  <tr ng-repeat="driver in driversList | filter: nameFilter">
     <td>{{$index + 1}}</td>
     <td>
       <img src="img/flags/{{driver.Driver.nationality}}.png" />
